test-cases/valid/reject/mult_bad_operand_type.ul
void main() {
    print 'c' * 4; // This isn't python
}
